# ai-assistant

./: README.md  package-lock.json  package.json
.github/workflows/: tauri-tag-build.yml
src/: App.vue  main.js  styles.css
src-tauri/: .env  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: conversation_service.rs  main.rs
src-tauri/src/models/: config.rs  conversation.rs  message.rs  mod.rs
src/components/: Conversation.vue  Header.vue  Settings.vue
