[package]
name = "ai-assistant"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
# license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
llm = { git = "https://github.com/rustformers/llm.git", branch = "main", features = ["cublas"] } # main branch for bin models
# llm = { git = "https://github.com/rustformers/llm.git", branch = "gguf" } # main branch for bin models
dotenv = { version = "0.15.0" }
rand = { version = "0.8.5" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[profile.dev.package.ggml-sys]
opt-level = 3

[profile.dev.package.gguf-sys]
opt-level = 3
